# ai-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml  main.yml  pytest.yml  staging.yml
alembic/: env.py
alembic/versions/: 73074da9193c_added_message_table.py  e59767e882df_added_messages_table.py
data/: persona.json  project.json
models/: __init__.py  conversation.py  message.py  user.py
src/: app.db  database.py  main.py
src/adapter/: llama_adapter.py
src/agents/: stakeholder_agent.py
src/controller/: ai_controller.py
src/controllers/: ai.py  ai_controller.py
src/dependencies/: __init__.py  database.py  event.py  rate_limiter.py  services.py  user.py
src/exceptions/: authentication_error.py  base_exceptions.py  context_load_exception.py  invalid_message_id_exception.py  llm_response_exception.py  missing_required_field.py
src/middlewares/: correlation_id.py  error_handler.py  events.py
src/models/: __init__.py  base.py  conversation.py  llm_query_model.py  message.py  message_model.py  persona_model.py  project_model.py  requirement_model.py  user.py
src/repository/: base.py  model_repository.py
src/schemas/: __init__.py  (+7 more)
tests/: conftest.py  helpers.py  test_agent_service.py  test_database.py  test_history_compactor_service.py  test_llama_adapter.py  test_main.py  test_message_service.py  test_neon_auth.py  test_persona_service.py  test_project_service.py  test_stakeholder_agent.py  test_user_dependency.py
(+35 files in other folders)
